@@ -1,3 +1,8 @@
+2006-08-03  Iain Holmes  <iain@gnome.org>
+
+	* FindStation.cs:
+	  FMConnection.cs: Patch from Thom May to search for group radio.
+
 2006-08-01  Iain Holmes  <iain@gnome.org>
 
 	* About.cs
